Changelog for isotoma.buildout.autodevelop
==========================================

0.0.17 (unreleased)
------------------

- Nothing changed yet.


0.0.16 (2012-12-31)
-------------------

- We do not autodevelop any "parts" directorys which means we need a list of
  part names to concatenate with the value of ``buildout:parts-directory``.
  Previously, this list was determined by evaluating ``${buildout:parts}``,
  however that didn't include parts that are pulled in automatically when
  referred to by other parts. Instead, we now get a list of part names by
  inspecting ``buildout.keys()``, filtered down to which of those parts have an
  assigned ``recipe``.


0.0.15 (2012-03-01)
-------------------

- Set ${autodevelop:developed} to '' if not using autodevelop (i.e. mode = off)


0.0.14 (2012-02-01)
-------------------

- Work even if ``[autodevelop]`` isnt present.


0.0.13 (2012-01-25)
-------------------

- Nothing changed yet.


0.0.12 (2012-01-25)
-------------------

- Any eggs that have been developed will be added to ${autodevelop:developed}


0.0.11 (2011-01-23)
-------------------

- buildout:directory will now be searched even if
  buildout:parts-directory == buildout:directory


0.0.10 (2011-08-31)
-------------------

- Allow autodevelop to no-op


0.0.9 (2011-08-17)
------------------

- Remove the horrible hack from 0.0.2 ;)


0.0.8 (2011-08-16)
------------------

- Nothing changed yet.


0.0.7 (2011-08-10)
------------------

- Brown paper bag


0.0.6 (2011-08-10)
------------------

- localeggs() builds zips so that this extension is python2.4 safe


0.0.5 (2011-08-10)
------------------

- Properly deal with lists that have gaps in the middle


0.0.4 (2011-08-10)
------------------

- Add ${autodevelop:mode} which can be ``deploy``, ``localeggs`` or ``checkout``.


0.0.3 (2011-06-23)
------------------

- Nothing changed yet.


0.0.2 (2011-06-16)
------------------

- If there are develop eggs, we will force them to be used over